HelloUltraviolet/Fixtures/RejectedSource/Statements/FrameNoActiveRegion/Source/Main.uv
//! Rejected statement specimen for implicit frame without an active region.

public procedure frameNoActiveRegionReference() -> () {
    frame {
    }
}
